[gd_scene load_steps=6 format=3 uid="uid://1sxa4t2y7xkv"]

[ext_resource type="Script" uid="uid://bq64warrfgu6a" path="res://Scenes/paper.gd" id="1_c7gsp"]
[ext_resource type="Texture2D" uid="uid://dr4y7sl7qxejj" path="res://Assets/textures/1-04851-00_BL_Notebook_Paper_Punch_G.jpg" id="2_322pb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c7gsp"]
radius = 9.61769

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4sl6c"]
size = Vector2(288, 360)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_322pb"]
size = Vector2(271, 348)

[node name="Paper" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
input_pickable = true
gravity_scale = 0.0
inertia = 1.76
linear_damp = 12.051
angular_damp = 41.835
script = ExtResource("1_c7gsp")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.53, 0.53)
texture = ExtResource("2_322pb")
region_enabled = true
region_rect = Rect2(27.8996, 17.2028, 547.412, 685.594)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("CircleShape2D_c7gsp")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -2)
shape = SubResource("RectangleShape2D_4sl6c")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -136.0
offset_top = -175.0
offset_right = 137.0
offset_bottom = 173.0
mouse_filter = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_right = 270.0
offset_bottom = 94.0
text = "asdasd"

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 88.0
offset_right = 273.0
offset_bottom = 348.0
mouse_filter = 2
text = "asdasdsad"

[node name="OverlapArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OverlapArea"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_322pb")

[node name="StampMask" type="Polygon2D" parent="."]
clip_children = 1
position = Vector2(0.501709, 0.501373)
scale = Vector2(0.996564, 0.99726)
texture = ExtResource("2_322pb")
polygon = PackedVector2Array(-144, -182, 145, -182, 146, 183, -145, 183)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_HoverArea_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_HoverArea_mouse_exited"]
[connection signal="area_entered" from="OverlapArea" to="." method="_on_overlap_area_area_entered"]
[connection signal="area_exited" from="OverlapArea" to="." method="_on_overlap_area_area_exited"]
